--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest __tests__/index.spec.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/FanksLi/timSort/issues"
   },
-  "homepage": "https://github.com/FanksLi/timSort#readme"
+  "homepage": "https://github.com/FanksLi/timSort#readme",
+  "dependencies": {
+    "jest": "^29.3.1"
+  }
 }
