--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest __tests__/index.spec.js"
   },
   "repository": {
     "type": "git",
@@ -16,13 +16,9 @@
   "bugs": {
     "url": "https://github.com/FanksLi/timSort/issues"
   },
-<<<<<<< Updated upstream
-  "homepage": "https://github.com/FanksLi/timSort#readme"
-=======
   "homepage": "https://github.com/FanksLi/timSort#readme",
   "dependencies": {
     "invariant": "^2.2.4",
     "jest": "^29.3.1"
   }
->>>>>>> Stashed changes
 }
